--- a/webproject/mysite/cloudbuild.yaml
+++ b/webproject/mysite/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
     args:
       - "-c"
       - |
-        pip install -r requirements.txt
-        python manage.py collectstatic --noinput
+        pip3 install -r requirements.txt
+        python3 manage.py collectstatic --noinput
         gcloud app deploy app.yaml --quiet
 timeout: "1200s"
