--- a/webproject/mysite/cloudbuild.yaml
+++ b/webproject/mysite/cloudbuild.yaml
@@ -1,10 +1,20 @@
 steps:
+  # 1) Python 환경에서 패키지 설치 + collectstatic
+  - name: python:3.9
+    entrypoint: bash
+    args:
+      - "-c"
+      - |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        python manage.py collectstatic --noinput
+
+  # 2) GCP SDK 환경에서 App Engine 배포
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk:latest
     entrypoint: bash
     args:
       - "-c"
       - |
-        pip3 install -r requirements.txt
-        python3 manage.py collectstatic --noinput
         gcloud app deploy app.yaml --quiet
+
 timeout: "1200s"
