--- a/webproject/mysite/cloudbuild.yaml
+++ b/webproject/mysite/cloudbuild.yaml
@@ -8,6 +8,7 @@ steps:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         python manage.py collectstatic --noinput
+        python manage.py migrate
 
   # 2) GCP SDK 환경에서 App Engine 배포
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk:latest
