--- a/webproject/mysite/app.yaml
+++ b/webproject/mysite/app.yaml
@@ -14,6 +14,7 @@ handlers:
     script: auto
 
 env_variables:
+  DJANGO_SECRET_KEY: "u#m-r54w(g&yb3zktktc1x@+qyb=&p1v5shwxoei$3qej2ywr_!"
   DB_NAME: "django_db"
   DB_USER: "root"
   DB_PASSWORD: "5(Mv3Fl{QYch;foK"
