--- a/webproject/mysite/cloudbuild.yaml
+++ b/webproject/mysite/cloudbuild.yaml
@@ -1,25 +1,24 @@
 steps:
-  # 1) Python 환경에서 패키지 설치 + static 수집 + migrate
   - name: python:3.9
     entrypoint: bash
     env:
-  - DB_HOST=/cloudsql/aiproject-462109:asia-northeast3:myproject-db
-  - DB_NAME=django_db
-  - DB_USER=root
-  - DB_PASSWORD=5(Mv3Fl{QYch;foK
-
+      - DB_HOST=/cloudsql/aiproject-462109:asia-northeast3:myproject-db
+      - DB_NAME=django_db
+      - DB_USER=root
+      - DB_PASSWORD=5(Mv3Fl{QYch;foK
     args:
       - "-c"
       - |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         python manage.py collectstatic --noinput
-        python manage.py migrate  # ✅ 여기 추가
+        python manage.py migrate
 
-  # 2) App Engine 배포
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk:latest
     entrypoint: bash
     args:
       - "-c"
       - |
         gcloud app deploy app.yaml --quiet
+
+timeout: "1200s"
