--- a/webproject/mysite/app.yaml
+++ b/webproject/mysite/app.yaml
@@ -1,7 +1,7 @@
 runtime: python39
 
 # 요청이 들어왔을 때 Gunicorn이 실행될 커맨드
-entrypoint: bash -c "gunicorn -b :$PORT config.wsgi:application"
+entrypoint: bash -c "python manage.py migrate && gunicorn -b :$PORT config.wsgi:application"
 
 # 정적 파일(collectstatic 결과)을 서빙하기 위한 핸들러
 handlers:
@@ -14,7 +14,7 @@ handlers:
     script: auto
 
 env_variables:
-  DJANGO_SECRET_KEY: "u#m-r54w(g&yb3zktktc1x@+qyb=&p1v5shwxoei$3qej2ywr_!"
+  # DJANGO_SECRET_KEY: "u#m-r54w(g&yb3zktktc1x@+qyb=&p1v5shwxoei$3qej2ywr_!"
   DB_NAME: "django_db"
   DB_USER: "django"
   DB_PASSWORD: "5(Mv3Fl{QYch;foK"
