--- a/webproject/mysite/requirements.txt
+++ b/webproject/mysite/requirements.txt
@@ -3,5 +3,7 @@ Django==4.2.21
 sqlparse==0.5.3
 gunicorn==20.1.0
 whitenoise==6.4.0
-mysqlclient>=2.1.0
+# mysqlclient>=2.1.0
+PyMySQL>=1.0.2
 psycopg2-binary>=2.9
+numpy>=1.26.0
